packages/next-swc/crates/core/tests/errors/next-font-loaders/font-modules/no-args/output.js
fn();
Inter();
const inter = Inter();
